--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,12 +5,12 @@ set(CMAKE_CXX_STANDARD 17)
 
 add_executable(hash_table
         main.cpp
-        lib/HashMap.hpp
+        lib/HashTable.hpp
         lib/util.cpp
         lib/util.h)
 
 add_executable(test
-        lib/HashMap.hpp
+        lib/HashTable.hpp
         lib/util.cpp
         lib/util.h
         test.cpp)
